--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>welcome</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni excepturi repellat atque beatae perferendis ipsa commodi at accusamus numquam perspiciatis.</p>
 </body>
 </html>
