--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>frist project</title>
 </head>
 <body>
-    <h1>welcome</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni excepturi repellat atque beatae perferendis ipsa commodi at accusamus numquam perspiciatis.</p>
-    <h2> nissa islam</h2>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, quisquam iste. Quas libero ut sunt consequatur magnam, cumque error quam repellendus tempora aut amet rerum voluptatibus cupiditate reiciendis laudantium earum quo. Maxime aut architecto ut quam voluptatibus delectus reiciendis esse!</p>
 </body>
 </html>
